// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomType transform Explicit CustomType - required 1`] = `
"type Post @model 
{
  location: Location!
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Explicit CustomType - with auth 1`] = `
"type Post @model 
{
  location: Location @auth(rules: [{allow: owner, ownerField: "owner"}])
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Explicit CustomType 1`] = `
"type Post @model 
{
  location: Location
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Implicit CustomType 1`] = `
"type Post @model 
{
  location: Location
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

type Location 
{
  lat: Float
  long: Float
}"
`;
